--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Mass School Shooting Memorial Map</h1>
-        <p>Honoring the victims of major school shootings in United States history (4+ casualties). Each point represents a tragedy that has profoundly impacted our communities and nation.</p>
+        <h1>Mass School Shooting Awareness Map</h1>
+        <p>This map showcases all school shootings in the United States with 4 or more casualties. Each point represents a tragedy that has profoundly impacted our communities and nation. Press on a point and click on its support link to see how you can make a difference!</p>
     </div>
     
 
